--- a/src/react-app/src/components/DevWrapper/style.css
+++ b/src/react-app/src/components/DevWrapper/style.css
@@ -1,7 +1,7 @@
-.plugin_panel {
+.DevWrapper {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
-    padding: 0 10px 10px 0;
-    overflow-y: auto;
+    min-height: 0;
+    border: 2px dashed orange;
 }
