many changes to try to conform to change requests

--- a/react-app/src/components/JobLog/style.css
+++ b/react-app/src/components/JobLog/style.css
@@ -1,11 +1,15 @@
 .JobLog {
-    min-height: 4em;
-    overflow-y: auto;
+    flex: 1 1 0px;
+    /* min-height: 4em; */
+    /* overflow-y: auto; */
     padding: 4px;
+    min-height: 0;
 
-    border: 1px solid silver;
+    /* border: 1px solid silver; */
     /* max-height: 20em; */
     /* overflow-y: auto; */
+    display: flex;
+    flex-direction: column;
 }
 
 .JobLog-line {
@@ -28,4 +32,14 @@
 
 .JobLog-normalRow {
     background-color: transparent;
+}
+
+.JobLog .FlexTable-col:nth-child(1) {
+    flex: 0 0 4em;
+}
+
+.JobLog .FlexTable-body .FlexTable-col:nth-child(2) {
+    font-family: monospace;
+    font-size: 90%;
+    white-space: pre-wrap
 }
