--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -87,3 +87,166 @@ body {
     text-align: right;
     padding-right: 1em;
 }
+
+
+.InfoTable {
+    display: flex;
+    flex-direction: column;
+}
+
+.InfoTable-row {
+    display: flex;
+    flex-direction: row;
+    padding: 4px;
+}
+
+.InfoTable-labelCol {
+    flex: 0 0 auto;
+    font-weight: bold;
+    color: rgba(150, 150, 150, 1);
+}
+
+.InfoTable-dataCol {
+    flex: 1 1 0px;
+    text-align: left;
+}
+
+
+.ant-modal.FullScreenModal {
+    /* width: 80% !important;
+    top: 10% !important;
+    bottom: 10% !important; */
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+    width: unset !important;
+    top: unset !important;
+    padding-bottom: 0;
+    margin: 10%;
+}
+
+.ant-modal.FullScreenModal .ant-modal-content {
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+    top: unset;
+    border: 2px blue dashed;
+    min-height: 0;
+}
+
+.ant-modal.FullScreenModal .ant-modal-content .ant-modal-header {
+    flex: 0 0 auto;
+}
+
+.ant-modal.FullScreenModal .ant-modal-content .ant-modal-body {
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+.ant-modal.FullScreenModal .ant-modal-content .ant-modal-footer {
+    flex: 0 0 auto;
+}
+
+/* .ant-modal.FullScreenModal .ant-tabs {
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.ant-modal.FullScreenModal .ant-tabs .ant-tabs-content {
+    flex: 1 1 0px;
+} */
+
+
+.ant-tabs.FullHeightTabs {
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+.ant-tabs.FullHeightTabs>.ant-tabs-content {
+    flex: 1 1 0px !important;
+    display: flex !important;
+    flex-direction: column !important;
+    min-height: 0;
+}
+
+.ant-tabs.FullHeightTabs>.ant-tabs-content>.ant-tabs-tabpane {
+    flex: 1 1 0px !important;
+    display: flex !important;
+    flex-direction: column !important;
+    min-height: 0;
+}
+
+/* flex table */
+
+
+.FlexTable {
+    flex: 1 1 0px;
+    flex-basis: 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+.FlexTable-header {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.FlexTable-row {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: row;
+    /* padding: 4px; */
+    /* margin: 4px; */
+    border-bottom: 1px silver solid;
+}
+
+.FlexTable-col {
+    flex: 0 0 auto;
+    /* border: 1px silver dashed; */
+    padding: 4px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
+.FlexTable-col:last-child {
+    flex: 1 1 0px;
+}
+
+.FlexTable-body {
+    flex: 1 1 0px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+/* .FlexTable-col:nth-child(1) {
+    flex: 0 0 4em;
+}
+
+.FlexTable-col:nth-child(2) {
+    flex: 1 1 0px;
+
+}
+
+.FlexTable-body .Table-col:nth-child(2) {
+    font-family: monospace;
+    font-size: 90%;
+    white-space: pre-wrap
+} */
+
+.FullyCenteredBox {
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
