--- a/react-app/src/components/MyJobs/style.css
+++ b/react-app/src/components/MyJobs/style.css
@@ -1,5 +1,8 @@
 .MyJobs {
     min-height: 0;
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
 }
 
 .MyJobs-table {
@@ -7,7 +10,8 @@
 }
 
 .MyJobs-tableCell,
-.MyJobs-table td {
+.MyJobs-table td,
+.MyJobs-table th {
     max-width: 0;
     overflow-x: hidden;
     text-overflow: ellipsis;
@@ -15,7 +19,7 @@
 }
 
 
-.MyJobs-table .ant-table-column-title {
+.MyJobs-table .ant-table-header-column {
     /* max-width: 0; */
     overflow-x: hidden;
     text-overflow: ellipsis;
