--- a/react-app/src/components/UserJobs/style.css
+++ b/react-app/src/components/UserJobs/style.css
@@ -29,6 +29,6 @@
 .UserJobs-filterArea {
     padding: 6px;
     border: 1px solid rgba(150, 150, 150, 0.3);
-    box-shadow: 4px 4px 4px;
+    /* box-shadow: 4px 4px 4px; */
     border-radius: 4px;
 }
