--- a/react-app/src/components/FlexTabs.css
+++ b/react-app/src/components/FlexTabs.css
@@ -18,6 +18,7 @@
     flex-direction: column;
     min-height: 0;
     transition: opacity 0.5s;
+    position: relative;
     /* padding-top: 4px; */
 }
 
