--- a/react-app/src/components/JobLog/style.css
+++ b/react-app/src/components/JobLog/style.css
@@ -47,3 +47,9 @@
     font-size: 90%;
     white-space: pre-wrap
 }
+
+/* antd tweak */
+
+.JobLog .ant-btn.ant-btn-icon-only {
+    font-size: inherit;
+}
