--- a/react-app/src/components/Table/Table.css
+++ b/react-app/src/components/Table/Table.css
@@ -55,7 +55,9 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 0px;
-    border: 1px solid silver;
+    /* border: 1px solid silver; */
+    border-bottom: 1px solid silver;
+    border-top: 1px solid silver;
     justify-content: center;
     overflow: hidden;
     min-height: 0;
