--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -15,6 +15,7 @@ body {
     width: 100%;
     /* font-size: 14px;
     font-family: 'Oxygen', sans-serif; */
+    font-family: 'Arial', sans-serif;
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
