update deps, replace momentjs with dayjs

--- a/react-app/src/components/AdminJobs/style.css
+++ b/react-app/src/components/AdminJobs/style.css
@@ -1,17 +1,17 @@
-.MyJobs {
+.AdminJobs {
     min-height: 0;
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
-.MyJobs-table {
+.AdminJobs-table {
     table-layout: fixed;
 }
 
-.MyJobs-tableCell,
-.MyJobs-table td,
-.MyJobs-table th {
+.AdminJobs-tableCell,
+.AdminJobs-table td,
+.AdminJobs-table th {
     max-width: 0;
     overflow-x: hidden;
     text-overflow: ellipsis;
@@ -19,14 +19,14 @@
 }
 
 
-.MyJobs-table .ant-table-header-column {
+.AdminJobs-table .ant-table-header-column {
     /* max-width: 0; */
     overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-.MyJobs-filterArea {
+.AdminJobs-filterArea {
     padding: 6px;
     margin: 0 20px 0 20px;
     border: 1px solid rgba(150, 150, 150, 0.3);
@@ -35,7 +35,7 @@
     background-color: rgba(200, 200, 200, 0.95);
 }
 
-.MyJobs-filterPanel {
+.AdminJobs-filterPanel {
     position: absolute;
     left: 0;
     top: 0;
@@ -48,97 +48,101 @@
     flex-direction: column;
 }
 
-.MyJobs-table.ant-table-wrapper {
+.AdminJobs-table.ant-table-wrapper {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table>.ant-table-content {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table>.ant-table-content {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table>.ant-table-content>.ant-table-body {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table>.ant-table-content>.ant-table-body {
     flex: 1 1 0px;
     display: flex;
     flex-direction: column;
 }
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table-pagination.ant-pagination {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table-pagination.ant-pagination {
     flex: 0 0 auto;
 }
 
-.MyJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table .ant-table-row {
+.AdminJobs-table.ant-table-wrapper>.ant-spin-nested-loading>.ant-spin-container>.ant-table .ant-table-row {
     height: 30px;
 }
 
 
-.MyJobs .Table-row>.Table-cell:nth-child(1) {
+.AdminJobs .Table-row>.Table-cell:nth-child(1) {
     flex: 0 0 4em;
     align-items: center;
 }
 
-.MyJobs .Table-row>.Table-cell:nth-child(2) {
+.AdminJobs .Table-row>.Table-cell:nth-child(2) {
     flex: 1 1 0px;
 }
 
 
-.MyJobs .Table-row>.Table-cell:nth-child(3) {}
+.AdminJobs .Table-row>.Table-cell:nth-child(3) {}
 
-.MyJobs .Table-row>.Table-cell:nth-child(4) {
+.AdminJobs .Table-row>.Table-cell:nth-child(4) {
     flex: 0 0 8em;
 }
 
-.MyJobs .Table-row>.Table-cell:nth-child(5) {
+.AdminJobs .Table-row>.Table-cell:nth-child(5) {
     flex: 0 0 8em;
 }
 
-.MyJobs .Table-row>.Table-cell:nth-child(6) {
+.AdminJobs .Table-row>.Table-cell:nth-child(6) {
     flex: 0 0 8em;
 }
 
-.MyJobs .Table-row>.Table-cell:nth-child(7) {
+.AdminJobs .Table-row>.Table-cell:nth-child(7) {
     flex: 0 0 8em;
 }
 
-.MyJobs .Table-row>.Table-cell:nth-child(8) {
+.AdminJobs .Table-row>.Table-cell:nth-child(8) {
     flex: 0 0 8em;
 }
 
-.MyJobs .Table-row>.Table-cell:nth-child(9) {
+.AdminJobs .Table-row>.Table-cell:nth-child(9) {
     flex: 0 0 8em;
     align-items: center;
 }
 
-.MyJobs .Table-row>.Table-cell:nth-child(10) {
+.AdminJobs .Table-row>.Table-cell:nth-child(10) {
     flex: 0 0 4em;
     align-items: center;
 
+}
+
+.AdminJobs .-controlBar {
+    margin: 10px;
 }
