fix running status icon, cancel button, narrative + app columns shrinking to 0 when browser window narrow.

--- a/react-app/src/components/AdminJobs/style.css
+++ b/react-app/src/components/AdminJobs/style.css
@@ -114,7 +114,9 @@
     flex: 0 0 9em;
 }
 
-.AdminJobs .Table-row>.Table-cell:nth-child(3) {}
+.AdminJobs .Table-row>.Table-cell:nth-child(3) {
+    min-width: 10em;
+}
 
 .AdminJobs .Table-row>.Table-cell:nth-child(4) {
     flex: 0 0 8em;
